styles/styles.css
/*
*  html5resetcss
*/
html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address,cite,code,del,dfn,em,img,ins,kbd,q,samp,small,strong,sub,sup,var,b,i,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;outline:0;font-size:100%;vertical-align:baseline;background:transparent}
body{line-height:1}
article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}
nav ul{list-style:none}
blockquote,q{quotes:none}
blockquote:before,blockquote:after,q:before,q:after{content:none}
a{margin:0;padding:0;font-size:100%;vertical-align:baseline;background:transparent}
ins{background-color:#ff9;color:#000;text-decoration:none}
mark{background-color:#ff9;color:#000;font-style:italic;font-weight:bold}
del{text-decoration:line-through}
abbr[title],dfn[title]{border-bottom:1px dotted;cursor:help}
table{border-collapse:collapse;border-spacing:0}
hr{display:block;height:1px;border:0;border-top:1px solid #ccc;margin:1em 0;padding:0}
input,select{vertical-align:middle}


body{
background-color: #4b3f3f;

}

/* start of NAV*/

nav{
position: fixed;
background-color: #171e3e;
padding-bottom: 10px;




}
.nav-wrapper{

    background-color: #171e3e;
    height: 75px;
}

.nav-h1{
    background-color: #fff;
    text-align: center;
    font-size:  2em ;
  font-weight: lighter;
    padding: 10px;
}

.nav-ul{
display: flex;
gap: 20px;
background-color: #171e3e;
color: white;
justify-content:space-between;
align-items: center;

height: 20px;
padding: 25px;

}

.nav-li{
    
    
}


.nav-a{
    text-decoration: none;
    color: #ffffff;
    font-size: 1.5em;
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
}
.nav-a:hover{

    color: #ffc74d;
}

@media screen and (max-width: 786px){


    .nav-wrapper{
height: 75px;


    }
    .nav-h1{
      font-size: 25px;
      
        
    }

.nav-ul{
 position: absolute;
flex-direction: column;
left: -100%;
width: 75%;
top: 70px;
transition: 1.5s ease-in-out ;
background-color: #171e3e;




 
}

.nav-li{
   padding: 5px;
}



.bar{
    display: block;
    height: 5px;
    width: 50px;
    background-color: #000000;
    margin: 6px;
   

}



.ham-line1{

   
}

.hamburger-button{

    float: right;
    margin: 10px 10px;
    background-color: #fff;
    display: block;
    cursor: pointer;

    position: absolute;
    right: 0px;
    
    
}



.active{
padding: 5px;
}





.nav-open{

    left: 0%;
   width: 100%; 
   height: 50vh;
}



}
    







/* end of nav*/


/* start of footer*/
footer{
   margin: auto;
   text-align: center; 
 width: 100%;
background-color: #171e3e;
    color: white;}

    




    .footer-wrapper{
        display: grid;
        background-color: #171e3e;
        padding: 5px;

        grid-template-columns: 1fr 1fr 1fr ;
        

       
    }
    .footer-h1{

        color: #b2cbff;
        text-align: center;
    }

.footer-section{

    margin: 10px;

    
    animation-timeline: view;
    transition: 3.5s;
  
   
}


    



    .footer-ul{
        list-style: none;
        display: grid;
        grid-template-columns: 1fr 1fr ;
        gap: 15px;
        padding-top: 20px;
        text-align: center;
    }

    .footer-li{

        
    }

    .footer-a{

color: #ffffff;
text-decoration: none;
    }


.footer-p{

color: #000;
background-color: #fff;
text-align: center;
font-size: 1em;

margin: auto;
padding: 10px;

}
.space{  height: 100px;}


@media screen and (max-width: 786px){
    
    .footer-ul{

        gap: 20px 0;
        padding-top: 20px;
        
    }
    .footer-img{
      
        display: block;
        margin: auto;
        
    }

    .footer-wrapper{

display: inline-grid;




grid-template-columns: 1fr;
    }
    
    
}

/* end of footer*/



/* start of hero */

.hero-wrapper{}

.hero-img{

   object-fit: cover;

   height: 800px;
width: 100%;
}

